--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
-<!DOCTYPE html>                 
+<!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratório de acessibilidade | Gustavo Farias Medeiros</title>
-    <link rel="stylesheet" href="styles.css">                       
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<h1>Laboratório de acessibilidade</h1>
-<p>Este é um laboratório para testar e demonstrar práticas de acessibilidade na web. Acessibilidade é fundamental para garantir que todas as pessoas, independentemente de suas habilidades, possam acessar e interagir com o conteúdo online.</p>
-<p>Explore os exemplos abaixo para ver como diferentes técnicas podem melhorar a acessibilidade do seu site.</p>
-<h2>Exemplos de Acessibilidade</h2>
-<ul>
-    <li><a href="exemplo1.html">Exemplo 1: Uso adequado de cabeçalhos</a></li>
-    <li><a href="exemplo2.html">Exemplo 2: Texto alternativo para imagens</a></li>
-    <li><a href="exemplo3.html">Exemplo 3: Contraste de cores</a></li>
-    <li><a href="exemplo4.html">Exemplo 4: Navegação por teclado</a></li>
-    <li><a href="exemplo5.html">Exemplo 5: Formulários acessíveis</a></li>
-            </ul>               
 
+<body>
+    <header>
+        <nav aria-label="Exemplos de Acessibilidade">
+            <h1>Laboratório de acessibilidade</h1>
+        </nav>
+    </header>
+    <main>
+        <p>Este é um laboratório para testar e demonstrar práticas de acessibilidade na web. Acessibilidade é fundamental
+            para garantir que todas as pessoas, independentemente de suas habilidades, possam acessar e interagir com o
+            conteúdo online.</p>
+        <p>Explore os exemplos abaixo para ver como diferentes técnicas podem melhorar a acessibilidade do seu site.</p>
+        <h2>Exemplos de Acessibilidade</h2>
+        <ul>
+            <li><a href="exemplo1.html">Exemplo 1: Uso adequado de cabeçalhos</a></li>
+            <li><a href="exemplo2.html">Exemplo 2: Texto alternativo para imagens</a></li>
+            <li><a href="exemplo3.html">Exemplo 3: Contraste de cores</a></li>
+            <li><a href="exemplo4.html">Exemplo 4: Navegação por teclado</a></li>
+            <li><a href="exemplo5.html">Exemplo 5: Formulários acessíveis</a></li>
+        </ul>
+    </main>
+    <footer>
+        <p>&copy; 2024 Gustavo Farias Medeiros. Todos os direitos reservados.</p>
+    </footer>
 </body>
+
 </html>
