Corrige estrutura do index

--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 </head>
 
 <body>
-    <header>
-        <nav aria-label="Exemplos de Acessibilidade">
-            <h1>Laboratório de acessibilidade</h1>
-        </nav>
-    </header>
-    <main>
+        <h1>Laboratório de Acessibilidade</h1>          
         <p>Este é um laboratório para testar e demonstrar práticas de acessibilidade na web. Acessibilidade é fundamental
             para garantir que todas as pessoas, independentemente de suas habilidades, possam acessar e interagir com o
             conteúdo online.</p>
@@ -27,10 +22,6 @@
             <li><a href="exemplo4.html">Exemplo 4: Navegação por teclado</a></li>
             <li><a href="exemplo5.html">Exemplo 5: Formulários acessíveis</a></li>
         </ul>
-    </main>
-    <footer>
-        <p>&copy; 2024 Gustavo Farias Medeiros. Todos os direitos reservados.</p>
-    </footer>
 </body>
 
 </html>
