--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="exemplo4.html">Exemplo 4: Navegação por teclado</a></li>
             <li><a href="exemplo5.html">Exemplo 5: Formulários acessíveis</a></li>
         </ul>
+        <h2>Recursos Adicionais</h2>
 </body>
 
 </html>
