--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <li><a href="exemplo4.html">Exemplo 4: Navegação por teclado</a></li>
             <li><a href="exemplo5.html">Exemplo 5: Formulários acessíveis</a></li>
         </ul>
-        
+        <footer>
+            <p>&copy; 2024 Gustavo Farias Medeiros. Todos os direitos reservados.</p>
+              
 </body>
 </html>
